Scrollbar fix

--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -73,6 +73,12 @@
     visibility: visible;
   }
 
+  // Fix for Safari scrollbar bug
+  ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+
   @media (max-width: @breakPointS) {
     width: 100%;
   }
